src/style/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */
:root {
	--white: #fff;
	--black: #000;
	--gray: #8b8b8b;
	--highlight: #e5ffc3;
	--red: #e4002b;
	--green: #24d05a;
	--pink: #eb4888;
	--blue: #10a2f5;
	--yellow: #e9bc3f;
}

::selection {
	background-color: var(--highlight);
	color: var(--black);
}
html,
body {
	margin: auto;
	padding: 20px;
	max-width: 650px;
	background-color: #fff;
	word-wrap: break-word;
	overflow-wrap: break-word;
	line-height: 1.6;
	color: var(--black);
}
html,
body,
button {
	font-family: "Roboto Mono", monospace;
}
h1,
strong,
b {
	color: var(--black);
}

h2,
h3,
h4,
h5,
h6 {
	color: var(--gray);
}

body.dark-mode,
body.dark-mode button,
body.dark-mode h1,
body.dark-mode .go-home,
button.dark-mode,
button.dark-mode button {
	background: var(--black);
	color: var(--white);
}
body.dark-mode nav {
	background: rgba(0, 0, 0, 0.7);
}

@media (prefers-color-scheme: dark) {
	html,
	body,
	body button,
	body h1,
	body strong,
	body b,
	body em,
	body blockquote,
	body .go-home {
		background: var(--black);
		color: var(--white);
	}
	body nav {
		background: rgba(0, 0, 0, 0.7);
	}
	body code {
		background-color: #333;
	}
}

header {
	position: relative;
}

a {
	color: var(--pink);
}

nav {
	position: sticky;
	top: 0;
	text-align: center;
	background: rgba(255, 255, 255, 0.9);
	backdrop-filter: blur(1px);
}

nav a {
	margin: 25px 0;
}
nav a:not(:last-child) {
	padding: 0 12px 0 0;
}

hr {
	border-top: 1px solid #ddd;
	margin: 1rem 0;
}

ul.posts-list,
ul.tags-list {
	padding: unset;
	list-style-type: none;
}

.post {
	margin: 0 0 30px 0;
}

.post .title {
	font-size: 1.3em;
}

.tag {
	display: inline-block;
	margin-right: 20px;
	color: var(--gray);
	font-size: 0.8rem;
}
.tag:hover {
	cursor: pointer;
	font-weight: bold;
}

.tag-home {
	margin-right: 10px;
	color: var(--gray);
}

textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
content {
	line-height: 1.6;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
}
code {
	padding: 2px 5px;
	background-color: #f2f2f2;
}
pre {
	padding: 1rem;
}
pre > code {
	all: unset;
}
blockquote {
	border: 1px solid var(--gray);
	color: var(--black);
	padding: 2px 0px 2px 20px;
	margin: 0px;
	font-style: italic;
}

h1 {
	font-weight: 400;
	margin: 0;
}

h2 {
	font-weight: 300;
	margin: 0 0 0.5em 0;
}

h3 {
	text-align: center;
}

.header-section {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;
}

.header-frame {
	max-width: 350px;
}

.article-title {
	font-size: 2em;
	margin: 0.25em 0 0;
}

ul li time {
	flex: 0 0 130px;
	font-style: italic;
	color: var(--gray);
}

